<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.pricingstrategies.strategy12">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/StrategyDescription"
            android:text="@string/description_complementary_pricing_1" />

        <ImageView
            style="@style/StrategyImage"
            android:src="@drawable/complementary_pricing1" />

        <TextView
            style="@style/StrategyExample"
            android:text="@string/example_complementary_pricing_1" />

        <TextView
            style="@style/StrategyDescription"
            android:text="@string/description_complementary_pricing_2" />

        <ImageView
            style="@style/StrategyImage"
            android:src="@drawable/complementary_pricing2" />

        <TextView
            style="@style/StrategyExample"
            android:text="@string/example_complementary_pricing_2" />

        <TextView
            style="@style/StrategyDescription"
            android:text="@string/description_complementary_pricing_3" />

        <ImageView
            style="@style/StrategyImage"
            android:src="@drawable/complementary_pricing3" />

        <TextView
            style="@style/StrategyExample"
            android:text="@string/example_complementary_pricing_3" />
    </LinearLayout>
</ScrollView>
